--- a/husky_base/CMakeLists.txt
+++ b/husky_base/CMakeLists.txt
@@ -52,7 +52,7 @@ add_subdirectory(${cython_thunderborg_ROOT}/src)
 add_executable(husky_node
    src/husky_base.cpp
    src/husky_hardware.cpp
- #  src/husky_diagnostics.cpp
+   src/husky_diagnostics.cpp
    src/horizon_legacy_wrapper.cpp
 # # ${CMAKE_CURRENT_BINARY_DIR}/src/cython-thunderborg/src/cython_thunderborg.cxx
 # # ${CMAKE_CURRENT_BINARY_DIR}/src/cython-thunderborg/src/cython_thunderborg.h
