--- a/husky_control/config/control.yaml
+++ b/husky_control/config/control.yaml
@@ -12,6 +12,8 @@ husky_velocity_controller:
   cmd_vel_timeout: 0.25
   velocity_rolling_window_size: 2
 
+  publish_cmd: true
+
   # Base frame_id
   base_frame_id: base_link
 
