--- a/husky_base/CMakeLists.txt
+++ b/husky_base/CMakeLists.txt
@@ -26,60 +26,33 @@ include(UseCython)
 
 add_subdirectory(${cython_thunderborg_ROOT}/src)
 
-# CYTHON MODULE
-# set_source_files_properties(${cython_thunderborg_ROOT}/src/ThunderBorgCythonMock.pyx PROPERTIES CYTHON_IS_CXX TRUE)
-#
-#   # Note: In this case, either one of these arguments may be omitted; their
-#   # value would have been inferred from that of the other.
-
-# add_custom_target(ReplicatePythonSourceTree ALL ${CMAKE_COMMAND} -P
-#   ${cython_thunderborg_ROOT}/cmake/ReplicatePythonSourceTree.cmake
-#   ${CMAKE_CURRENT_BINARY_DIR}
-#   WORKING_DIRECTORY ${cython_thunderborg_ROOT})
-
-#add_cython_target(cy_code ${CMAKE_CURRENT_BINARY_DIR}/src/cython-thunderborg/src/ThunderBorgCythonMock.pyx)
-#add_dependencies(cy_code ReplicatePythonSourceTree)
-#add_library(cy_code MODULE ${cy_code})
-
-# target_link_libraries(cy_code ...)
-
-#target_include_directories(cy_code PUBLIC  ${CMAKE_CURRENT_BINARY_DIR}/src/)
-
-
-#target_link_libraries(thunderborg ${PYTHON_LIBRARIES})
- 
-# # Build nemesis_node
+# Build nemesis_node
 add_executable(husky_node
    src/husky_base.cpp
    src/husky_hardware.cpp
    src/husky_diagnostics.cpp
-   src/horizon_legacy_wrapper.cpp
-# # ${CMAKE_CURRENT_BINARY_DIR}/src/cython-thunderborg/src/cython_thunderborg.cxx
-# # ${CMAKE_CURRENT_BINARY_DIR}/src/cython-thunderborg/src/cython_thunderborg.h
 )
 
 add_definitions(-include Python.h)
 target_link_libraries(husky_node cython_thunderborg ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-# # target_link_libraries(husky_node ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+roslint_cpp(
+  src/husky_base.cpp
+  src/husky_hardware.cpp
+  src/husky_diagnostics.cpp
+  include/husky_base/husky_diagnostics.h
+  include/husky_base/husky_hardware.h
+)
 
-# # # roslint_cpp(
-# # #   src/husky_base.cpp
-# # #   src/husky_hardware.cpp
-# # #   src/husky_diagnostics.cpp
-# # #   include/husky_base/husky_diagnostics.h
-# # #   include/husky_base/husky_hardware.h
-# # # )
+roslaunch_add_file_check(launch)
 
-# roslaunch_add_file_check(launch)
+install(TARGETS husky_node
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
-# install(TARGETS husky_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
-
-# install(DIRECTORY launch config
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+install(DIRECTORY launch config
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
