--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,13 @@
-*.h linguist-language=C++
-*.cpp linguist-language=C++
+# *.h linguist-language=C++
+# *.cpp linguist-language=C++
+
+# Sources
+*.c     text diff=cpp
+*.cc    text diff=cpp
+*.cxx   text diff=cpp
+*.cpp   text diff=cpp
+*.c++   text diff=cpp
+*.hpp   text diff=cpp
+*.h     text diff=cpp
+*.h++   text diff=cpp
+*.hh    text diff=cpp
