--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,13 @@
-# *.h linguist-language=C++
-# *.cpp linguist-language=C++
+*.h linguist-language=C++
+*.cpp linguist-language=C++
 
-# Sources
-*.c     text diff=cpp
-*.cc    text diff=cpp
-*.cxx   text diff=cpp
-*.cpp   text diff=cpp
-*.c++   text diff=cpp
-*.hpp   text diff=cpp
-*.h     text diff=cpp
-*.h++   text diff=cpp
-*.hh    text diff=cpp
+# Sources https://github.com/alexkaratarakis/gitattributes/blob/master/C%2B%2B.gitattributes
+# *.c     text diff=cpp
+# *.cc    text diff=cpp
+# *.cxx   text diff=cpp
+# *.cpp   text diff=cpp
+# *.c++   text diff=cpp
+# *.hpp   text diff=cpp
+# *.h     text diff=cpp
+# *.h++   text diff=cpp
+# *.hh    text diff=cpp
