--- a/nemesis_msgs/package.xml
+++ b/nemesis_msgs/package.xml
@@ -4,6 +4,7 @@
   <version>0.1.0</version>
   <description>Messages for Nemesis</description>
 
+  <author email="antoan.bekele@gmail.com">Antoan Bekele</author>
   <author email="paul@bovbel.com">Paul Bovbel</author>
 
   <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
